# DKN-Backend

./: .gitignore  README.md  pyproject.toml
app/: auth.py  database.py  main.py  models.py  router.py  schemas.py  settings.py
